{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 294,
  "lineage": "1b28acf3-43f7-344b-de04-a394d57ad30e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-017264208bdda4e23",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:subnet/subnet-017264208bdda4e23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017264208bdda4e23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428858718180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "PrivateSubnet2"
            },
            "vpc_id": "vpc-07ffc4ffa089733d0"
          }
        },
        {
          "index_key": "subnet-02b9c3797c2e1443c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:subnet/subnet-02b9c3797c2e1443c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b9c3797c2e1443c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428858718180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "PrivateSubnet1"
            },
            "vpc_id": "vpc-07ffc4ffa089733d0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:vpc/vpc-07ffc4ffa089733d0",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00ae6f7b8406cabc5",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0305825317b13ded8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ffc4ffa089733d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09af6cad9fac78beb",
            "owner_id": "428858718180",
            "tags": {
              "Environment": "test",
              "Name": "MyVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc_endpoint",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:vpc-endpoint/vpce-0f558935bd20585c7",
            "dns_entry": [
              {
                "dns_name": "vpce-0f558935bd20585c7-d6kencmd.execute-api.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f558935bd20585c7-d6kencmd-eu-west-1a.execute-api.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f558935bd20585c7-d6kencmd-eu-west-1b.execute-api.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "execute-api.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0693924YB1F26GRGGBE"
              },
              {
                "dns_name": "*.execute-api.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0693924YB1F26GRGGBE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f558935bd20585c7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01419d77d31ef8b59",
              "eni-0c6a1ae399f4ba613"
            ],
            "owner_id": "428858718180",
            "policy": "{\"Statement\":[{\"Action\":\"execute-api:*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::428858718180:root\"},\"Resource\":\"arn:aws:execute-api:eu-west-1:428858718180:*\",\"Sid\":\"apigw\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d44570a584e02fba"
            ],
            "service_name": "com.amazonaws.eu-west-1.execute-api",
            "state": "available",
            "subnet_ids": [
              "subnet-017264208bdda4e23",
              "subnet-02b9c3797c2e1443c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07ffc4ffa089733d0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:security-group/sg-071a6c8f1668ee111",
            "description": "SG for lambda",
            "egress": [],
            "id": "sg-071a6c8f1668ee111",
            "ingress": [],
            "name": "lambda_sg",
            "name_prefix": "",
            "owner_id": "428858718180",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sagemaker_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:security-group/sg-0dd7f9058bd27cfc9",
            "description": "SG for SageMaker test",
            "egress": [],
            "id": "sg-0dd7f9058bd27cfc9",
            "ingress": [],
            "name": "sagemaker-sg-test",
            "name_prefix": "",
            "owner_id": "428858718180",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress from lambda",
            "from_port": 443,
            "id": "sgrule-2088280717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071a6c8f1668ee111",
            "security_group_rule_id": "sgr-04b05769d5b3d0295",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_security_group",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-sagemaker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "All egress from sagemaker ",
            "from_port": 1025,
            "id": "sgrule-393571410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd7f9058bd27cfc9",
            "security_group_rule_id": "sgr-0bff05b937166c8c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sagemaker_security_group",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-sagemaker3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress from sagemaker3 ",
            "from_port": 443,
            "id": "sgrule-602623572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd7f9058bd27cfc9",
            "security_group_rule_id": "sgr-099b52345d34e3b5b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sagemaker_security_group",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress traffic for lambda components",
            "from_port": 0,
            "id": "sgrule-3283294040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071a6c8f1668ee111",
            "security_group_rule_id": "sgr-0593812d97b9f8419",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_security_group",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_internal_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Ingress traffic for lambda components from VPC",
            "from_port": 443,
            "id": "sgrule-2498209517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071a6c8f1668ee111",
            "security_group_rule_id": "sgr-00df0645a7b52c6ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_security_group",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sagemaker_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress traffic for sagemaker components ",
            "from_port": 0,
            "id": "sgrule-701667671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd7f9058bd27cfc9",
            "security_group_rule_id": "sgr-0abd5f187ca1dc8ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sagemaker_security_group",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sagemaker_internal_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Ingress traffic for sagemaker components from VPC for ",
            "from_port": 0,
            "id": "sgrule-1217842419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd7f9058bd27cfc9",
            "security_group_rule_id": "sgr-00b740af61690d937",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sagemaker_security_group",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}